<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <!-- Global -->
    <string name="app_name">HBFav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="timeout_error">
        Could not retrieve entries.\n
        Please try again later.
    </string>

    <!-- Navigation title -->
    <string name="title_section0">Settings</string>
    <string name="title_section1">Timeline</string>
    <string name="title_section2">New Entries</string>
    <string name="title_section3">Popular Entries</string>
    <string name="title_section4">About App</string>

    <!-- HotEntry -->
    <string name="users">users</string>

    <!-- Web view -->
    <string name="processing">Processing...</string>

    <!-- BookmarkEntryActivity -->
    <string name="comment">Comment</string>
    <string name="tags">Tags(Split by space)</string>
    <string name="recommend_tags">Recommend tags</string>
    <string name="all_tags">All tags</string>
    <string name="post_twitter">Twitter</string>
    <string name="post_facebook">Facebook</string>
    <string name="post_mixi">mixi check</string>
    <string name="post_evernote">Evernote</string>
    <string name="post_private">Private</string>
    <string name="save_entry">Save</string>
    <string name="update_entry">Update</string>
    <string name="delete_entry">Delete</string>
    <string name="failed_add_bookmark_title">Failed to add bookmark...</string>
    <string name="failed_add_bookmark_message">Please change tags or try later.</string>

    <!-- Setting -->
    <string name="setting_settings">SETTINGS</string>
    <string name="setting_accounts">ACCOUNTS</string>
    <string name="setting_outer_service">SERVICES</string>
    <string name="setting_configs">CONFIGS</string>
    <string name="setting_account">Hatena account</string>
    <string name="pref_hatena_user_name">pref_user_name</string>
    <string name="pref_hatena_user_name_summary">Tap here to register hatena user name.</string>
    <string name="setting_logout_from_hatena_service">Logout from hatena service</string>
    <string name="setting_login_to_hatena_service">Login to hatena service</string>
    <string name="pref_logout_from_hatena_service">pref_logout_from_hatena_service</string>
    <string name="pref_send_crash_log">pref_send_crash_log</string>
    <string name="pref_send_crash_log_title">Send crash log</string>
    <string name="pref_send_crash_log_summary">If you can send crash log, please enable this option.</string>

    <!-- About App -->
    <string name="about_issues_demands">Issues • Demands(GitHub)</string>
    <string name="about_from_developer">From Developer</string>
    <string name="about_credits">Credits</string>

    <!-- From Developer -->
    <string name="title_how_to_follow">How to follow user</string>
    <string name="message_how_to_follow">
        Follow user api is not provided, so to follow a user, visit http://b.hatena.ne.jp/USERNAME and click \'お気に入りに追加\'.\n
        For example, visit http://b.hatena.ne.jp/YasuOza and you can find \'お気に入りに追加\'. Make sure you logged into Hatena bookmark.
    </string>
    <string name="title_how_to_add_bookmark">How to add entry to your bookmark</string>
    <string name="message_how_to_add_bookmark"><![CDATA[
        Currently, it is not supported in this application. (I\'m so sorry…)\n
        To add entry to your bookmark, please install \'はてなブックマーク\' from https://play.google.com/store/apps/details?id=com.hatena.android.bookmark,
        then you can add bookmark from Browser -> Share -> \'ブックマークに登録\'.
    ]]></string>
    <string name="title_last_message">To be continued.</string>
    <string name="message_last_message">
        I\'m working hard to make this application more useful.\n
        This release is my first Android application, and I learned a lot from this one month developing.\n
        So, please stay tuned. I promise you to bring many useful features in coming future updates!\n
    </string>

    <!-- Credits -->
    <string name="actionbar_pulll_to_refresh">ActionBar-PullToRefresh</string>
    <string name="license_actionbar_pull_to_refresh_text">Copyright 2013 Chris Banes\n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n
        http://www.apache.org/licenses/LICENSE-2.0\n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>

    <string name="volley">Volley</string>
    <string name="license_volley">
        Copyright (C) 2011 The Android Open Source Project
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n
        \n
        http://www.apache.org/licenses/LICENSE-2.0\n
        \n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>

    <string name="joda_time">Joda-Time</string>
    <string name="license_joda_time">http://joda-time.sourceforge.net/license.html</string>

    <string name="rounded_image_view">RoundedImageView</string>
    <string name="license_rounded_image_view">https://raw.github.com/vinc3m1/RoundedImageView/master/NOTICE.txt</string>

</resources>
